# kiss-u

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEVELOPMENT.md  README.md  SUPPORT.md  pyproject.toml
.claude/agents/: architect.md  bug-fixer.md  code-quality-reviewer.md  code-security-reviewer.md  developer.md  devops.md  product-owner.md  project-manager.md  scrum-master.md  technical-analyst.md  test-architect.md  tester.md  ux-designer.md
.devcontainer/: devcontainer.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: agent_request.yml  bug_report.yml  config.yml  extension_submission.yml  feature_request.yml  preset_submission.yml
.github/agents/: architect.agent.md  bug-fixer.agent.md  business-analyst.agent.md  code-quality-reviewer.agent.md  code-security-reviewer.agent.md  developer.agent.md  devops.agent.md  product-owner.agent.md  project-manager.agent.md  scrum-master.agent.md  technical-analyst.agent.md  test-architect.agent.md  tester.agent.md  ux-designer.agent.md
.kiss/: context.yml  extensions.yml  init-options.json  integration.json
docs/: AI-urls.md  README.md  docfx.json  index.md  installation.md  local-development.md  quickstart.md  standards.md  subagent-user-guide.md  upgrade.md
extensions/: EXTENSION-API-REFERENCE.md  EXTENSION-DEVELOPMENT-GUIDE.md  EXTENSION-PUBLISHING-GUIDE.md  EXTENSION-USER-GUIDE.md  README.md  RFC-EXTENSION-SYSTEM.md  catalog.json
integrations/: CONTRIBUTING.md  README.md  catalog.json
presets/: ARCHITECTURE.md  PUBLISHING.md  README.md  catalog.json
scripts/: generate-checksums.py  hatch_build_hooks.py
src/kiss_cli/: ui.py  (+13 more)
subagents/: bug-fixer.md  business-analyst.md  code-security-reviewer.md  developer.md  devops.md  product-owner.md  project-manager.md  scrum-master.md  technical-analyst.md  test-architect.md  tester.md  ux-designer.md
tests/: __init__.py  conftest.py  test_agent_skills_compliance.py  test_asset_integrity.py  test_branch_numbering.py  test_check_command.py  test_check_tool.py  test_cli_version.py  test_context_file.py  test_context_merge.py  test_dispatch_timeout.py  test_extension_skills.py  test_extensions.py  test_init_multi.py  test_merge.py  test_multi_integration.py  test_offline.py  test_presets.py  test_registrar_path_traversal.py  test_skill_bundle_layout.py  test_skill_common_helpers.py  test_step_timeout.py  test_subagent_rendering.py  test_timestamp_branches.py  test_workflows.py
workflows/: ARCHITECTURE.md  PUBLISHING.md  README.md  catalog.json
(+672 files in other folders)
